kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: vehicle-sales-api

spec:
  replicas: 2

  selector:
    matchLabels:
      app: vehicle-sales-api

  template:
    metadata:
      labels:
        app: vehicle-sales-api

    spec:
      containers:

        - name: vehicle-sales-api

          image: gabriellimadasilva/vehicle-sales-api:latest

          imagePullPolicy: Always

          ports:
            - containerPort: 8080
