kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: vehicle-sales-api

spec:
  selector:
    app: vehicle-sales-api

  ports:
    - port: 80
      targetPort: 8080

  type: ClusterIP
